--- a/api-reference/customers/update-customer.mdx
+++ b/api-reference/customers/update-customer.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Update Customer"
 description: "Update an existing customer's information."
-api: "PATCH https://api.bipa.app/v1/customers/{customer_id}"
+api: "PATCH https://api.bipa.tech/v1/customers/{customer_id}"
 ---
 
 ## Request
@@ -69,8 +69,8 @@ Returns the updated customer object.
 
 <RequestExample>
 ```bash cURL
-curl -X PATCH https://api.bipa.app/v1/customers/cus_a1b2c3d4e5f6 \
-  -H "Authorization: Bearer sk_live_..." \
+curl -X PATCH https://api.bipa.tech/v1/customers/cus_a1b2c3d4e5f6 \
+  -H "Authorization: Bearer bipa_live_sk_..." \
   -H "Content-Type: application/json" \
   -d '{
     "email": "joao.novo@example.com",
@@ -90,9 +90,9 @@ curl -X PATCH https://api.bipa.app/v1/customers/cus_a1b2c3d4e5f6 \
 import requests
 
 response = requests.patch(
-    "https://api.bipa.app/v1/customers/cus_a1b2c3d4e5f6",
+    "https://api.bipa.tech/v1/customers/cus_a1b2c3d4e5f6",
     headers={
-        "Authorization": "Bearer sk_live_...",
+        "Authorization": "Bearer bipa_live_sk_...",
         "Content-Type": "application/json"
     },
     json={
@@ -114,11 +114,11 @@ customer = response.json()
 
 ```javascript Node.js
 const response = await fetch(
-  "https://api.bipa.app/v1/customers/cus_a1b2c3d4e5f6",
+  "https://api.bipa.tech/v1/customers/cus_a1b2c3d4e5f6",
   {
     method: "PATCH",
     headers: {
-      "Authorization": "Bearer sk_live_...",
+      "Authorization": "Bearer bipa_live_sk_...",
       "Content-Type": "application/json"
     },
     body: JSON.stringify({
