--- a/rate-limits.mdx
+++ b/rate-limits.mdx
@@ -16,7 +16,7 @@ Bipa enforces rate limits to ensure fair usage and protect the API from abuse. R
 | Enterprise | Custom | Custom |
 
 <Note>
-  Contact [sales](https://produtos.bipa.app/crypto-as-a-service) if you need higher limits.
+  Contact [sales](https://bipa.tech) if you need higher limits.
 </Note>
 
 ## Rate limit headers
@@ -197,7 +197,7 @@ Some endpoints have additional limits:
 
 ## Monitoring usage
 
-Track your API usage in the [dashboard](https://dashboard.bipa.app):
+Track your API usage in the [console](https://console.bipa.tech):
 
 1. Go to **Settings** → **API Usage**
 2. View request counts by endpoint
