--- a/api-reference/balances/get-balances.mdx
+++ b/api-reference/balances/get-balances.mdx
@@ -1,12 +1,12 @@
 ---
 title: "Get Balances"
 description: "Retrieve current balances for a customer."
-api: "GET https://api.bipa.app/v1/customers/{customer_id}/balances"
+api: "GET https://api.bipa.tech/v1/customers/{customer_id}/balances"
 ---
 
 ## Request
 
-Retrieve the current balances for a customer across all supported currencies.
+Retrieve the current balances for a customer across all supported assets.
 
 ### Path parameters
 
@@ -21,19 +21,19 @@ Retrieve the current balances for a customer across all supported currencies.
 </ResponseField>
 
 <ResponseField name="balances" type="object">
-  Balance objects keyed by currency
+  Balance objects keyed by asset
   <Expandable title="balance object">
     <ResponseField name="available" type="string">
-      Available balance
+      Available balance (smallest unit)
     </ResponseField>
     <ResponseField name="pending" type="string">
-      Pending balance (awaiting confirmation)
+      Pending balance (smallest unit)
     </ResponseField>
-    <ResponseField name="currency" type="string">
-      Currency code
+    <ResponseField name="asset" type="string">
+      Asset code
     </ResponseField>
     <ResponseField name="decimals" type="integer">
-      Decimal places for formatting
+      Decimal places for the asset
     </ResponseField>
   </Expandable>
 </ResponseField>
@@ -44,56 +44,56 @@ Retrieve the current balances for a customer across all supported currencies.
 
 <RequestExample>
 ```bash cURL
-curl https://api.bipa.app/v1/customers/cus_a1b2c3d4e5f6/balances \
-  -H "Authorization: Bearer sk_live_..."
+curl https://api.bipa.tech/v1/customers/cus_a1b2c3d4e5f6/balances \
+  -H "Authorization: Bearer bipa_live_sk_..."
 ```
 
 ```python Python
 import requests
+from decimal import Decimal
+
+def to_human(amount: str, decimals: int) -> Decimal:
+    return Decimal(amount) / Decimal(10 ** decimals)
 
 response = requests.get(
-    "https://api.bipa.app/v1/customers/cus_a1b2c3d4e5f6/balances",
-    headers={"Authorization": "Bearer sk_live_..."}
+    "https://api.bipa.tech/v1/customers/cus_a1b2c3d4e5f6/balances",
+    headers={"Authorization": "Bearer bipa_live_sk_..."}
 )
 
-balances = response.json()
+data = response.json()
 
 # Display formatted balances
-for currency, balance in balances["balances"].items():
-    available = float(balance["available"])
-    pending = float(balance["pending"])
+for asset, balance in data["balances"].items():
     decimals = balance["decimals"]
+    available = to_human(balance["available"], decimals)
+    pending = to_human(balance["pending"], decimals)
+    total = available + pending
 
-    # BRL is stored in cents
-    if currency == "BRL":
-        available /= 100
-        pending /= 100
-
-    print(f"{currency}: {available:.{decimals}f} (pending: {pending:.{decimals}f})")
+    print(f"{asset}: {available:.{decimals}f} available, {pending:.{decimals}f} pending (total: {total:.{decimals}f})")
 ```
 
 ```javascript Node.js
+function toHuman(amount, decimals) {
+  return Number(BigInt(amount)) / 10 ** decimals;
+}
+
 const response = await fetch(
-  "https://api.bipa.app/v1/customers/cus_a1b2c3d4e5f6/balances",
+  "https://api.bipa.tech/v1/customers/cus_a1b2c3d4e5f6/balances",
   {
-    headers: { "Authorization": "Bearer sk_live_..." }
+    headers: { "Authorization": "Bearer bipa_live_sk_..." }
   }
 );
 
 const { balances } = await response.json();
 
 // Display formatted balances
-for (const [currency, balance] of Object.entries(balances)) {
-  let available = parseFloat(balance.available);
-  let pending = parseFloat(balance.pending);
+for (const [asset, balance] of Object.entries(balances)) {
+  const decimals = balance.decimals;
+  const available = toHuman(balance.available, decimals);
+  const pending = toHuman(balance.pending, decimals);
+  const total = available + pending;
 
-  // BRL is stored in cents
-  if (currency === "BRL") {
-    available /= 100;
-    pending /= 100;
-  }
-
-  console.log(`${currency}: ${available.toFixed(balance.decimals)} (pending: ${pending.toFixed(balance.decimals)})`);
+  console.log(`${asset}: ${available.toFixed(decimals)} available, ${pending.toFixed(decimals)} pending (total: ${total.toFixed(decimals)})`);
 }
 ```
 </RequestExample>
@@ -106,19 +106,19 @@ for (const [currency, balance] of Object.entries(balances)) {
     "BRL": {
       "available": "150000",
       "pending": "50000",
-      "currency": "BRL",
+      "asset": "BRL",
       "decimals": 2
     },
     "USDT": {
-      "available": "245.67",
-      "pending": "100.00",
-      "currency": "USDT",
-      "decimals": 2
+      "available": "245670000",
+      "pending": "100000000",
+      "asset": "USDT",
+      "decimals": 6
     },
     "BTC": {
-      "available": "0.05234567",
-      "pending": "0.01000000",
-      "currency": "BTC",
+      "available": "5234567",
+      "pending": "1000000",
+      "asset": "BTC",
       "decimals": 8
     }
   },
@@ -133,19 +133,19 @@ for (const [currency, balance] of Object.entries(balances)) {
     "BRL": {
       "available": "0",
       "pending": "0",
-      "currency": "BRL",
+      "asset": "BRL",
       "decimals": 2
     },
     "USDT": {
-      "available": "0.00",
-      "pending": "0.00",
-      "currency": "USDT",
-      "decimals": 2
+      "available": "0",
+      "pending": "0",
+      "asset": "USDT",
+      "decimals": 6
     },
     "BTC": {
-      "available": "0.00000000",
-      "pending": "0.00000000",
-      "currency": "BTC",
+      "available": "0",
+      "pending": "0",
+      "asset": "BTC",
       "decimals": 8
     }
   },
@@ -169,29 +169,32 @@ for (const [currency, balance] of Object.entries(balances)) {
 Before executing operations, verify sufficient balance:
 
 ```python
-def has_sufficient_balance(customer_id: str, currency: str, amount: float) -> bool:
+from decimal import Decimal
+
+def to_smallest_unit(amount: Decimal, decimals: int) -> str:
+    return str(int(amount * Decimal(10 ** decimals)))
+
+def has_sufficient_balance(customer_id: str, asset: str, amount: Decimal) -> bool:
     """Check if customer has sufficient available balance."""
 
     response = requests.get(
-        f"https://api.bipa.app/v1/customers/{customer_id}/balances",
-        headers={"Authorization": "Bearer sk_live_..."}
+        f"https://api.bipa.tech/v1/customers/{customer_id}/balances",
+        headers={"Authorization": "Bearer bipa_live_sk_..."}
     )
 
     balances = response.json()["balances"]
 
-    if currency not in balances:
+    if asset not in balances:
         return False
 
-    available = float(balances[currency]["available"])
+    balance = balances[asset]
+    available = Decimal(balance["available"])
+    required = Decimal(to_smallest_unit(amount, balance["decimals"]))
 
-    # BRL is stored in cents
-    if currency == "BRL":
-        available /= 100
+    return available >= required
 
-    return available >= amount
-
-# Usage
-if has_sufficient_balance("cus_abc123", "USDT", 100.00):
+# Usage: Check if customer has 100 USDT available
+if has_sufficient_balance("cus_abc123", "USDT", Decimal("100")):
     # Proceed with trade or withdrawal
     pass
 else:
@@ -199,46 +202,46 @@ else:
     pass
 ```
 
-## Portfolio valuation
+## Display helper
 
-Calculate total portfolio value in BRL:
+Format balances for display in your UI:
 
-```python
-def get_portfolio_value_brl(customer_id: str) -> float:
-    """Calculate total portfolio value in BRL."""
+```typescript
+interface FormattedBalance {
+  asset: string;
+  available: string;
+  pending: string;
+  total: string;
+}
 
-    # Get balances
-    balances = requests.get(
-        f"https://api.bipa.app/v1/customers/{customer_id}/balances",
-        headers={"Authorization": "Bearer sk_live_..."}
-    ).json()["balances"]
+function formatBalances(balances: Record<string, Balance>): FormattedBalance[] {
+  const formatters: Record<string, Intl.NumberFormat> = {
+    BRL: new Intl.NumberFormat("pt-BR", { style: "currency", currency: "BRL" }),
+    USDT: new Intl.NumberFormat("en-US", { minimumFractionDigits: 2, maximumFractionDigits: 2 }),
+    BTC: new Intl.NumberFormat("en-US", { minimumFractionDigits: 8, maximumFractionDigits: 8 })
+  };
 
-    # Get current rates
-    rates = {}
-    for pair in ["USDT-BRL", "BTC-BRL"]:
-        quote = requests.get(
-            "https://api.bipa.app/v1/quotes",
-            headers={"Authorization": "Bearer sk_live_..."},
-            params={"from": pair.split("-")[0], "to": "BRL", "amount": "1"}
-        ).json()
-        rates[pair.split("-")[0]] = float(quote["to_amount_cents"]) / 100
+  return Object.entries(balances).map(([asset, balance]) => {
+    const decimals = balance.decimals;
+    const available = Number(BigInt(balance.available)) / 10 ** decimals;
+    const pending = Number(BigInt(balance.pending)) / 10 ** decimals;
+    const total = available + pending;
 
-    total_brl = 0
+    const formatter = formatters[asset];
 
-    # BRL balance
-    total_brl += float(balances["BRL"]["available"]) / 100
+    return {
+      asset,
+      available: asset === "BRL" ? formatter.format(available) : `${formatter.format(available)} ${asset}`,
+      pending: asset === "BRL" ? formatter.format(pending) : `${formatter.format(pending)} ${asset}`,
+      total: asset === "BRL" ? formatter.format(total) : `${formatter.format(total)} ${asset}`
+    };
+  });
+}
 
-    # USDT converted to BRL
-    usdt_balance = float(balances["USDT"]["available"])
-    total_brl += usdt_balance * rates["USDT"]
-
-    # BTC converted to BRL
-    btc_balance = float(balances["BTC"]["available"])
-    total_brl += btc_balance * rates["BTC"]
-
-    return total_brl
-
-portfolio_value = get_portfolio_value_brl("cus_abc123")
-print(f"Portfolio value: R$ {portfolio_value:,.2f}")
+// Example output:
+// [
+//   { asset: "BRL", available: "R$ 1.500,00", pending: "R$ 500,00", total: "R$ 2.000,00" },
+//   { asset: "USDT", available: "245.67 USDT", pending: "100.00 USDT", total: "345.67 USDT" },
+//   { asset: "BTC", available: "0.05234567 BTC", pending: "0.01000000 BTC", total: "0.06234567 BTC" }
+// ]
 ```
-
