--- a/api-reference/customers/create-individual.mdx
+++ b/api-reference/customers/create-individual.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Create Individual Customer"
 description: "Create a new individual customer (PF) with CPF."
-api: "POST https://api.bipa.app/v1/customers"
+api: "POST https://api.bipa.tech/v1/customers"
 ---
 
 ## Request
@@ -107,8 +107,8 @@ Create a customer representing a Brazilian individual.
 
 <RequestExample>
 ```bash cURL
-curl -X POST https://api.bipa.app/v1/customers \
-  -H "Authorization: Bearer sk_live_..." \
+curl -X POST https://api.bipa.tech/v1/customers \
+  -H "Authorization: Bearer bipa_live_sk_..." \
   -H "Content-Type: application/json" \
   -d '{
     "type": "individual",
@@ -136,9 +136,9 @@ curl -X POST https://api.bipa.app/v1/customers \
 import requests
 
 response = requests.post(
-    "https://api.bipa.app/v1/customers",
+    "https://api.bipa.tech/v1/customers",
     headers={
-        "Authorization": "Bearer sk_live_...",
+        "Authorization": "Bearer bipa_live_sk_...",
         "Content-Type": "application/json"
     },
     json={
@@ -167,10 +167,10 @@ customer = response.json()
 ```
 
 ```javascript Node.js
-const response = await fetch("https://api.bipa.app/v1/customers", {
+const response = await fetch("https://api.bipa.tech/v1/customers", {
   method: "POST",
   headers: {
-    "Authorization": "Bearer sk_live_...",
+    "Authorization": "Bearer bipa_live_sk_...",
     "Content-Type": "application/json"
   },
   body: JSON.stringify({
