--- a/api-reference/onchain/get-transfer.mdx
+++ b/api-reference/onchain/get-transfer.mdx
@@ -1,17 +1,17 @@
 ---
 title: "Get Transfer"
 description: "Retrieve details of an on-chain transfer."
-api: "GET https://api.bipa.app/v1/onchain/transfers/{transfer_id}"
+api: "GET https://api.bipa.tech/v1/onchain/transfers/{transfer_id}"
 ---
 
 ## Request
 
-Retrieve details for a specific on-chain transfer (deposit or withdrawal).
+Retrieve details for a specific on-chain transfer (inbound or outbound).
 
 ### Path parameters
 
 <ParamField path="transfer_id" type="string" required>
-  The unique transfer identifier (e.g., `txn_abc123` or `wd_xyz789`)
+  The unique transfer identifier (e.g., `txn_abc123`)
 </ParamField>
 
 ## Response
@@ -26,8 +26,8 @@ Returns the full transfer object.
   Customer who owns the transfer
 </ResponseField>
 
-<ResponseField name="type" type="string">
-  `deposit` or `withdrawal`
+<ResponseField name="direction" type="string">
+  Transfer direction: `inbound` or `outbound`
 </ResponseField>
 
 <ResponseField name="asset" type="string">
@@ -38,12 +38,20 @@ Returns the full transfer object.
   Blockchain network
 </ResponseField>
 
-<ResponseField name="amount" type="string">
-  Transfer amount
+<ResponseField name="amount_gross" type="string">
+  Total amount in smallest unit
+</ResponseField>
+
+<ResponseField name="amount_net" type="string">
+  Net amount in smallest unit (credited for inbound, received by destination for outbound)
 </ResponseField>
 
 <ResponseField name="fee" type="string">
-  Network fee (for withdrawals)
+  Network fee in smallest unit (0 for inbound transfers)
+</ResponseField>
+
+<ResponseField name="decimals" type="integer">
+  Decimal places for the asset (6 for USDT, 8 for BTC)
 </ResponseField>
 
 <ResponseField name="status" type="string">
@@ -51,11 +59,11 @@ Returns the full transfer object.
 </ResponseField>
 
 <ResponseField name="address" type="string">
-  Deposit address (for deposits)
+  Deposit address (for inbound transfers)
 </ResponseField>
 
 <ResponseField name="destination_address" type="string">
-  Recipient address (for withdrawals)
+  Recipient address (for outbound transfers)
 </ResponseField>
 
 <ResponseField name="tx_hash" type="string">
@@ -84,47 +92,65 @@ Returns the full transfer object.
 
 <RequestExample>
 ```bash cURL
-curl https://api.bipa.app/v1/onchain/transfers/txn_abc123 \
-  -H "Authorization: Bearer sk_live_..."
+curl https://api.bipa.tech/v1/onchain/transfers/txn_abc123 \
+  -H "Authorization: Bearer bipa_live_sk_..."
 ```
 
 ```python Python
 import requests
+from decimal import Decimal
+
+def to_human(amount_str: str, decimals: int) -> Decimal:
+    return Decimal(amount_str) / Decimal(10 ** decimals)
 
 response = requests.get(
-    "https://api.bipa.app/v1/onchain/transfers/txn_abc123",
-    headers={"Authorization": "Bearer sk_live_..."}
+    "https://api.bipa.tech/v1/onchain/transfers/txn_abc123",
+    headers={"Authorization": "Bearer bipa_live_sk_..."}
 )
 
 transfer = response.json()
+decimals = transfer['decimals']
 print(f"Transfer {transfer['id']}: {transfer['status']}")
+print(f"Direction: {transfer['direction']}")
+print(f"Gross: {to_human(transfer['amount_gross'], decimals)}")
+print(f"Net: {to_human(transfer['amount_net'], decimals)}")
+print(f"Fee: {to_human(transfer['fee'], decimals)}")
 print(f"Confirmations: {transfer['confirmations']}/{transfer['confirmations_required']}")
 ```
 
 ```javascript Node.js
+function toHuman(amountStr, decimals) {
+  const divisor = 10n ** BigInt(decimals);
+  return Number(BigInt(amountStr)) / Number(divisor);
+}
+
 const response = await fetch(
-  "https://api.bipa.app/v1/onchain/transfers/txn_abc123",
+  "https://api.bipa.tech/v1/onchain/transfers/txn_abc123",
   {
-    headers: { "Authorization": "Bearer sk_live_..." }
+    headers: { "Authorization": "Bearer bipa_live_sk_..." }
   }
 );
 
 const transfer = await response.json();
+const d = transfer.decimals;
 console.log(`Transfer ${transfer.id}: ${transfer.status}`);
-console.log(`Confirmations: ${transfer.confirmations}/${transfer.confirmations_required}`);
+console.log(`Direction: ${transfer.direction}`);
+console.log(`Gross: ${toHuman(transfer.amount_gross, d)}, Net: ${toHuman(transfer.amount_net, d)}, Fee: ${toHuman(transfer.fee, d)}`);
 ```
 </RequestExample>
 
 <ResponseExample>
-```json 200 OK - Confirmed Deposit
+```json 200 OK - Confirmed Inbound (100 USDT)
 {
   "id": "txn_abc123",
   "customer_id": "cus_a1b2c3d4e5f6",
-  "type": "deposit",
+  "direction": "inbound",
   "asset": "USDT",
   "network": "polygon",
-  "amount": "100.00",
-  "fee": "0.00",
+  "amount_gross": "100000000",
+  "amount_net": "100000000",
+  "fee": "0",
+  "decimals": 6,
   "status": "confirmed",
   "address": "0x1234567890abcdef1234567890abcdef12345678",
   "tx_hash": "0xabcdef1234567890abcdef1234567890abcdef1234567890abcdef1234567890",
@@ -135,15 +161,17 @@ console.log(`Confirmations: ${transfer.confirmations}/${transfer.confirmations_r
 }
 ```
 
-```json 200 OK - Pending Deposit
+```json 200 OK - Pending Inbound (0.05 BTC)
 {
   "id": "txn_def456",
   "customer_id": "cus_a1b2c3d4e5f6",
-  "type": "deposit",
+  "direction": "inbound",
   "asset": "BTC",
   "network": "bitcoin",
-  "amount": "0.05000000",
-  "fee": "0.00",
+  "amount_gross": "5000000",
+  "amount_net": "5000000",
+  "fee": "0",
+  "decimals": 8,
   "status": "processing",
   "address": "bc1qxy2kgdygjrsqtzq2n0yrf2493p83kkfjhx0wlh",
   "tx_hash": "abc123def456789abc123def456789abc123def456789abc123def456789abcd",
@@ -153,21 +181,23 @@ console.log(`Confirmations: ${transfer.confirmations}/${transfer.confirmations_r
 }
 ```
 
-```json 200 OK - Completed Withdrawal
+```json 200 OK - Completed Outbound (100 USDT + 1 USDT fee)
 {
-  "id": "wd_xyz789",
+  "id": "txn_xyz789",
   "customer_id": "cus_a1b2c3d4e5f6",
-  "type": "withdrawal",
+  "direction": "outbound",
   "asset": "USDT",
   "network": "polygon",
-  "amount": "100.00",
-  "fee": "0.50",
+  "amount_gross": "101000000",
+  "amount_net": "100000000",
+  "fee": "1000000",
+  "decimals": 6,
   "status": "confirmed",
   "destination_address": "0xabcdef1234567890abcdef1234567890abcdef12",
   "tx_hash": "0x9876543210fedcba9876543210fedcba9876543210fedcba9876543210fedcba",
   "confirmations": 128,
   "confirmations_required": 128,
-  "idempotency_key": "wd_unique_456",
+  "idempotency_key": "txn_unique_456",
   "created_at": "2024-01-15T10:30:00Z",
   "confirmed_at": "2024-01-15T10:32:00Z"
 }
@@ -186,7 +216,7 @@ console.log(`Confirmations: ${transfer.confirmations}/${transfer.confirmations_r
 
 ## Tracking confirmations
 
-For pending deposits, you can poll the status or use webhooks:
+For pending transfers, you can poll the status or use webhooks:
 
 ```python
 import time
@@ -197,8 +227,8 @@ def wait_for_confirmation(transfer_id: str, timeout: int = 3600):
 
     while time.time() - start_time < timeout:
         response = requests.get(
-            f"https://api.bipa.app/v1/onchain/transfers/{transfer_id}",
-            headers={"Authorization": "Bearer sk_live_..."}
+            f"https://api.bipa.tech/v1/onchain/transfers/{transfer_id}",
+            headers={"Authorization": "Bearer bipa_live_sk_..."}
         )
 
         transfer = response.json()
@@ -218,6 +248,5 @@ def wait_for_confirmation(transfer_id: str, timeout: int = 3600):
 ```
 
 <Tip>
-  Using webhooks is more efficient than polling. Subscribe to `onchain.deposit.confirmed` and `onchain.withdrawal.completed` events.
+  Using webhooks is more efficient than polling. Subscribe to `onchain.transfer.confirmed` events.
 </Tip>
-
