--- a/api-reference/onchain/list-transfers.mdx
+++ b/api-reference/onchain/list-transfers.mdx
@@ -1,7 +1,7 @@
 ---
 title: "List Transfers"
 description: "List all on-chain transfers with pagination and filtering."
-api: "GET https://api.bipa.app/v1/onchain/transfers"
+api: "GET https://api.bipa.tech/v1/onchain/transfers"
 ---
 
 ## Request
@@ -26,8 +26,8 @@ Retrieve a paginated list of on-chain transfers.
   Filter by customer
 </ParamField>
 
-<ParamField query="type" type="string">
-  Filter by type: `deposit` or `withdrawal`
+<ParamField query="direction" type="string">
+  Filter by direction: `inbound` or `outbound`
 </ParamField>
 
 <ParamField query="asset" type="string">
@@ -71,62 +71,64 @@ Retrieve a paginated list of on-chain transfers.
 <RequestExample>
 ```bash cURL
 # List all transfers
-curl "https://api.bipa.app/v1/onchain/transfers?limit=20" \
-  -H "Authorization: Bearer sk_live_..."
+curl "https://api.bipa.tech/v1/onchain/transfers?limit=20" \
+  -H "Authorization: Bearer bipa_live_sk_..."
 
-# Filter by customer and type
-curl "https://api.bipa.app/v1/onchain/transfers?customer_id=cus_abc123&type=deposit" \
-  -H "Authorization: Bearer sk_live_..."
+# Filter by customer and direction
+curl "https://api.bipa.tech/v1/onchain/transfers?customer_id=cus_abc123&direction=inbound" \
+  -H "Authorization: Bearer bipa_live_sk_..."
 
 # Filter by asset and status
-curl "https://api.bipa.app/v1/onchain/transfers?asset=USDT&status=confirmed" \
-  -H "Authorization: Bearer sk_live_..."
+curl "https://api.bipa.tech/v1/onchain/transfers?asset=USDT&status=confirmed" \
+  -H "Authorization: Bearer bipa_live_sk_..."
 ```
 
 ```python Python
 import requests
 
-# List all pending deposits
+# List all pending inbound transfers
 response = requests.get(
-    "https://api.bipa.app/v1/onchain/transfers",
-    headers={"Authorization": "Bearer sk_live_..."},
+    "https://api.bipa.tech/v1/onchain/transfers",
+    headers={"Authorization": "Bearer bipa_live_sk_..."},
     params={
-        "type": "deposit",
+        "direction": "inbound",
         "status": "processing",
         "limit": 50
     }
 )
 
 result = response.json()
-print(f"Found {result['total_count']} pending deposits")
+print(f"Found {result['total_count']} pending inbound transfers")
 
 for transfer in result["data"]:
-    print(f"  {transfer['id']}: {transfer['amount']} {transfer['asset']} "
+    decimals = transfer['decimals']
+    amount = int(transfer['amount_net']) / 10**decimals
+    print(f"  {transfer['id']}: {amount} {transfer['asset']} "
           f"({transfer['confirmations']}/{transfer['confirmations_required']})")
 ```
 
 ```javascript Node.js
-// List confirmed withdrawals this month
+// List confirmed outbound transfers this month
 const startOfMonth = new Date();
 startOfMonth.setDate(1);
 startOfMonth.setHours(0, 0, 0, 0);
 
 const params = new URLSearchParams({
-  type: "withdrawal",
+  direction: "outbound",
   status: "confirmed",
   created_after: startOfMonth.toISOString(),
   limit: "100"
 });
 
 const response = await fetch(
-  `https://api.bipa.app/v1/onchain/transfers?${params}`,
+  `https://api.bipa.tech/v1/onchain/transfers?${params}`,
   {
-    headers: { "Authorization": "Bearer sk_live_..." }
+    headers: { "Authorization": "Bearer bipa_live_sk_..." }
   }
 );
 
 const { data: transfers, total_count } = await response.json();
-console.log(`${total_count} withdrawals this month`);
+console.log(`${total_count} outbound transfers this month`);
 ```
 </RequestExample>
 
@@ -138,11 +140,13 @@ console.log(`${total_count} withdrawals this month`);
     {
       "id": "txn_abc123",
       "customer_id": "cus_a1b2c3d4e5f6",
-      "type": "deposit",
+      "direction": "inbound",
       "asset": "USDT",
       "network": "polygon",
-      "amount": "100.00",
-      "fee": "0.00",
+      "amount_gross": "100000000",
+      "amount_net": "100000000",
+      "fee": "0",
+      "decimals": 6,
       "status": "confirmed",
       "address": "0x1234567890abcdef1234567890abcdef12345678",
       "tx_hash": "0xabcdef...",
@@ -152,13 +156,15 @@ console.log(`${total_count} withdrawals this month`);
       "confirmed_at": "2024-01-15T10:35:00Z"
     },
     {
-      "id": "wd_xyz789",
+      "id": "txn_xyz789",
       "customer_id": "cus_a1b2c3d4e5f6",
-      "type": "withdrawal",
+      "direction": "outbound",
       "asset": "BTC",
       "network": "bitcoin",
-      "amount": "0.01000000",
-      "fee": "0.00005000",
+      "amount_gross": "1005000",
+      "amount_net": "1000000",
+      "fee": "5000",
+      "decimals": 8,
       "status": "confirmed",
       "destination_address": "bc1qxy2kgdygjrsqtzq2n0yrf2493p83kkfjhx0wlh",
       "tx_hash": "abc123def...",
@@ -176,7 +182,7 @@ console.log(`${total_count} withdrawals this month`);
 
 ## Analytics example
 
-Calculate total deposit and withdrawal volumes:
+Calculate total inbound and outbound volumes:
 
 ```python
 from collections import defaultdict
@@ -203,8 +209,8 @@ def get_transfer_summary(customer_id: str = None, days: int = 30):
             params["starting_after"] = starting_after
 
         response = requests.get(
-            "https://api.bipa.app/v1/onchain/transfers",
-            headers={"Authorization": "Bearer sk_live_..."},
+            "https://api.bipa.tech/v1/onchain/transfers",
+            headers={"Authorization": "Bearer bipa_live_sk_..."},
             params=params
         ).json()
 
@@ -214,28 +220,33 @@ def get_transfer_summary(customer_id: str = None, days: int = 30):
             break
         starting_after = response["data"][-1]["id"]
 
-    # Aggregate by type and asset
-    summary = defaultdict(lambda: defaultdict(float))
+    # Aggregate by direction and asset (using integers to avoid float issues)
+    summary = defaultdict(lambda: defaultdict(int))
 
     for transfer in transfers:
         asset = transfer["asset"]
-        transfer_type = transfer["type"]
-        amount = float(transfer["amount"])
+        direction = transfer["direction"]
+        decimals = transfer["decimals"]
+        amount_net = int(transfer["amount_net"])
+        amount_gross = int(transfer["amount_gross"])
 
-        summary[asset][f"{transfer_type}_volume"] += amount
-        summary[asset][f"{transfer_type}_count"] += 1
+        summary[asset][f"{direction}_volume_net"] += amount_net
+        summary[asset][f"{direction}_volume_gross"] += amount_gross
+        summary[asset][f"{direction}_count"] += 1
+        summary[asset]["decimals"] = decimals  # Store for display
 
-        if transfer_type == "withdrawal":
-            summary[asset]["total_fees"] += float(transfer.get("fee", 0))
+        if direction == "outbound":
+            summary[asset]["total_fees"] += int(transfer.get("fee", 0))
 
     return dict(summary)
 
 # Generate report
 summary = get_transfer_summary(days=30)
 for asset, stats in summary.items():
+    decimals = stats.get("decimals", 6)
+    divisor = 10 ** decimals
     print(f"\n{asset}:")
-    print(f"  Deposits: {stats.get('deposit_count', 0):.0f} ({stats.get('deposit_volume', 0):.8f})")
-    print(f"  Withdrawals: {stats.get('withdrawal_count', 0):.0f} ({stats.get('withdrawal_volume', 0):.8f})")
-    print(f"  Withdrawal fees: {stats.get('total_fees', 0):.8f}")
+    print(f"  Inbound: {stats.get('inbound_count', 0)} transfers ({stats.get('inbound_volume_net', 0) / divisor:.{decimals}f})")
+    print(f"  Outbound: {stats.get('outbound_count', 0)} transfers ({stats.get('outbound_volume_net', 0) / divisor:.{decimals}f})")
+    print(f"  Total fees paid: {stats.get('total_fees', 0) / divisor:.{decimals}f}")
 ```
-
