--- a/api-reference/pix/overview.mdx
+++ b/api-reference/pix/overview.mdx
@@ -14,10 +14,10 @@ Pix is Brazil's instant payment system, enabling 24/7 transfers that complete in
 
 <CardGroup cols={2}>
   <Card title="Receive payments" icon="arrow-down">
-    Generate Pix keys and QR codes for customers to receive BRL
+    Generate static QR codes for customers to receive BRL
   </Card>
   <Card title="Send payments" icon="arrow-up">
-    Initiate instant Pix transfers to any Pix key
+    Initiate instant Pix payouts to any Pix key
   </Card>
 </CardGroup>
 
@@ -31,18 +31,18 @@ sequenceDiagram
     participant Pix as Pix Network
 
     Note over App,Bipa: Cash-in Flow
-    App->>Bipa: Create QR code
-    Bipa-->>App: QR code + payload
+    App->>Bipa: Create static QR code
+    Bipa-->>App: QR code + BR Code
     App-->>User: Display QR code
     User->>Pix: Pay via bank app
     Pix->>Bipa: Payment notification
-    Bipa->>App: Webhook (pix.payment.received)
+    Bipa->>App: Webhook (pix.received)
 
     Note over App,Bipa: Cash-out Flow
-    App->>Bipa: Create payment
+    App->>Bipa: Create payout
     Bipa->>Pix: Send Pix
     Pix-->>Bipa: Confirmation
-    Bipa->>App: Webhook (pix.payment.completed)
+    Bipa->>App: Webhook (pix.completed)
 ```
 
 ## Pix key types
@@ -50,40 +50,55 @@ sequenceDiagram
 | Type | Format | Example |
 |------|--------|---------|
 | `evp` | Random UUID | `a1b2c3d4-e5f6-7890-abcd-ef1234567890` |
-| `cpf` | 11 digits | `12345678900` |
-| `cnpj` | 14 digits | `12345678000199` |
-| `email` | Email address | `pagamentos@empresa.com.br` |
-| `phone` | E.164 format | `+5511999999999` |
 
 <Note>
-  Random keys (`evp`) are recommended for privacy as they don't expose personal information.
+  For now, customers will only be able to receive payments from Random keys (`evp`) or Static QR Codes (that also direct the payment to the Random key).
+  Random keys are recommended for privacy as they don't expose personal information.
 </Note>
 
-## Payment statuses
+## Amount encoding
+
+All monetary amounts are returned as **string-encoded integers** in centavos (BRL smallest unit).
+
+| Asset | Decimals | Example |
+|-------|----------|---------|
+| BRL | 2 | `"100000"` = R$ 1,000.00 |
+
+<Warning>
+  Never use floating-point types (`float`, `double`) for monetary calculations. Use arbitrary-precision libraries.
+</Warning>
+
+## Transaction statuses
 
 | Status | Description |
 |--------|-------------|
-| `pending` | Payment initiated, awaiting processing |
-| `processing` | Payment being processed by Pix network |
-| `completed` | Payment successfully completed |
-| `failed` | Payment failed (see error for details) |
-| `refunded` | Payment was refunded |
+| `pending` | Transaction initiated, awaiting processing |
+| `processing` | Transaction being processed by Pix network |
+| `completed` | Transaction successfully completed |
+| `failed` | Transaction failed (see error for details) |
+| `refunded` | Transaction was refunded |
 
-## The Pix payment object
+## The Pix transaction object
 
 ```json
 {
-  "id": "pix_pay_abc123",
+  "id": "pix_abc123",
   "customer_id": "cus_a1b2c3d4e5f6",
   "direction": "outbound",
-  "amount_cents": 100000,
-  "fee_cents": 0,
+  "amount": "100000",
+  "fee": "0",
+  "decimals": 2,
   "status": "completed",
-  "destination": {
-    "type": "pix_key",
-    "key": "recipient@email.com",
-    "holder_name": "Maria Santos",
-    "holder_document": "***456***"
+  "counterparty": {
+    "name": "Maria Santos",
+    "document": "***456***",
+    "pix_key": "recipient@email.com",
+    "bank_account": {
+      "ispb_code": "341",
+      "branch_number": "1234",
+      "account_number": "1234567890",
+      "account_type": "checking"
+    }
   },
   "description": "Payment for services",
   "end_to_end_id": "E12345678202401151030abcdef123456",
@@ -96,20 +111,20 @@ sequenceDiagram
 ## Endpoints
 
 <CardGroup cols={2}>
-  <Card title="Create Pix Key" icon="key" href="/api-reference/pix/create-pix-key">
-    Register a Pix key for a customer
+  <Card title="List Pix Keys" icon="key" href="/api-reference/pix/list-keys">
+    List a customer's Pix keys
   </Card>
-  <Card title="Create Payment" icon="paper-plane" href="/api-reference/pix/create-payment">
-    Send a Pix payment (cash-out)
-  </Card>
-  <Card title="Create QR Code" icon="qrcode" href="/api-reference/pix/create-qr-code">
+  <Card title="Create Static QR Code" icon="qrcode" href="/api-reference/pix/create-static-qr-code">
     Generate a QR code for receiving (cash-in)
   </Card>
-  <Card title="Get Payment" icon="magnifying-glass" href="/api-reference/pix/get-payment">
-    Retrieve payment details
+  <Card title="Create Payout" icon="paper-plane" href="/api-reference/pix/create-payout">
+    Send a Pix payout (cash-out)
   </Card>
-  <Card title="List Payments" icon="list" href="/api-reference/pix/list-payments">
-    List all Pix payments
+  <Card title="Get Transaction" icon="magnifying-glass" href="/api-reference/pix/get-transaction">
+    Retrieve transaction details
+  </Card>
+  <Card title="List Transactions" icon="list" href="/api-reference/pix/list-transactions">
+    List all Pix transactions
   </Card>
 </CardGroup>
 
@@ -117,8 +132,8 @@ sequenceDiagram
 
 | Operation | Minimum | Maximum |
 |-----------|---------|---------|
-| Pix payment | R$ 0.01 | R$ 100,000.00 per transaction |
-| Daily outbound | - | R$ 1,000,000.00 per customer |
+| Pix payout | R$ 0.01 | R$ 15,000.00 per transaction |
+| Daily outbound | - | Defined per customer |
 
 <Tip>
   Contact us for higher limits on business accounts.
@@ -126,11 +141,10 @@ sequenceDiagram
 
 ## Webhooks
 
-Subscribe to these events to track Pix payment lifecycle:
+Subscribe to these events to track Pix transaction lifecycle:
 
 | Event | Description |
 |-------|-------------|
-| `pix.payment.received` | Incoming payment received (cash-in) |
-| `pix.payment.completed` | Outgoing payment completed (cash-out) |
-| `pix.payment.failed` | Payment failed |
-
+| `pix.received` | Incoming payment received (cash-in) |
+| `pix.completed` | Outgoing payout completed (cash-out) |
+| `pix.failed` | Transaction failed |
