--- a/authentication.mdx
+++ b/authentication.mdx
@@ -17,8 +17,8 @@ Bipa provides two types of API keys:
 
 | Prefix | Environment | Purpose |
 |--------|-------------|---------|
-| `sk_live_` | Production | Real transactions with real money |
-| `sk_test_` | Sandbox | Testing and development |
+| `bipa_live_sk_` | Production | Real transactions with real money |
+| `bipa_test_sk_` | Sandbox | Testing and development |
 
 <Warning>
   Never expose your API keys in client-side code, public repositories, or logs. Treat them like passwords.
@@ -31,8 +31,8 @@ Include your API key in the `Authorization` header:
 <CodeGroup>
 
 ```bash cURL
-curl https://api.bipa.app/v1/customers \
-  -H "Authorization: Bearer sk_live_xxxxxxxxxxxx" \
+curl https://api.bipa.tech/v1/customers \
+  -H "Authorization: Bearer bipa_live_sk_xxxxxxxxxxxx" \
   -H "Content-Type: application/json"
 ```
 
@@ -40,26 +40,26 @@ curl https://api.bipa.app/v1/customers \
 import requests
 
 response = requests.get(
-    "https://api.bipa.app/v1/customers",
+    "https://api.bipa.tech/v1/customers",
     headers={
-        "Authorization": "Bearer sk_live_xxxxxxxxxxxx",
+        "Authorization": "Bearer bipa_live_sk_xxxxxxxxxxxx",
         "Content-Type": "application/json"
     }
 )
 ```
 
 ```javascript Node.js
-const response = await fetch("https://api.bipa.app/v1/customers", {
+const response = await fetch("https://api.bipa.tech/v1/customers", {
   headers: {
-    "Authorization": "Bearer sk_live_xxxxxxxxxxxx",
+    "Authorization": "Bearer bipa_live_sk_xxxxxxxxxxxx",
     "Content-Type": "application/json"
   }
 });
 ```
 
 ```go Go
-req, _ := http.NewRequest("GET", "https://api.bipa.app/v1/customers", nil)
-req.Header.Set("Authorization", "Bearer sk_live_xxxxxxxxxxxx")
+req, _ := http.NewRequest("GET", "https://api.bipa.tech/v1/customers", nil)
+req.Header.Set("Authorization", "Bearer bipa_live_sk_xxxxxxxxxxxx")
 req.Header.Set("Content-Type", "application/json")
 
 client := &http.Client{}
@@ -70,8 +70,8 @@ resp, _ := client.Do(req)
 
 ## Obtaining API keys
 
-1. Log in to your [Bipa Dashboard](https://dashboard.bipa.app)
-2. Navigate to **Settings** → **API Keys**
+1. Log in to your [Bipa Console](https://console.bipa.tech)
+2. Navigate to **Developers** → **API Keys**
 3. Click **Create new key**
 4. Copy your key immediately — it won't be shown again
 
@@ -84,7 +84,7 @@ resp, _ := client.Do(req)
 The sandbox environment uses the same base URL but with test API keys:
 
 ```bash
-curl https://api.bipa.app/v1/customers \
+curl https://api.bipa.tech/v1/customers \
   -H "Authorization: Bearer sk_test_xxxxxxxxxxxx"
 ```
 
@@ -104,7 +104,7 @@ If authentication fails, you'll receive a `401 Unauthorized` response:
     "type": "authentication_error",
     "code": "invalid_api_key",
     "message": "The API key provided is invalid or has been revoked.",
-    "doc_url": "https://docs.bipa.app/errors#invalid_api_key"
+    "doc_url": "https://docs.bipa.tech/errors#invalid_api_key"
   }
 }
 ```
@@ -114,7 +114,7 @@ Common authentication issues:
 | Error Code | Cause | Solution |
 |------------|-------|----------|
 | `invalid_api_key` | Key doesn't exist or is malformed | Check the key format and copy it again |
-| `revoked_api_key` | Key has been revoked | Generate a new key in the dashboard |
+| `revoked_api_key` | Key has been revoked | Generate a new key in the console |
 | `missing_authorization` | No `Authorization` header | Include the header in your request |
 
 ## Security best practices
@@ -137,7 +137,7 @@ Common authentication issues:
     Create different API keys for different services or environments. This makes it easier to revoke access if needed.
   </Accordion>
   <Accordion title="Monitor API usage">
-    Review your API logs in the dashboard regularly to detect unusual activity.
+    Review your API logs in the console regularly to detect unusual activity.
   </Accordion>
 </AccordionGroup>
 
@@ -145,7 +145,7 @@ Common authentication issues:
 
 For additional security, you can restrict API key usage to specific IP addresses:
 
-1. Go to **Settings** → **API Keys** in the dashboard
+1. Go to **Developers** → **API Keys** in the console
 2. Select the key you want to restrict
 3. Add allowed IP addresses or CIDR ranges
 
