--- a/errors.mdx
+++ b/errors.mdx
@@ -14,7 +14,7 @@ When an error occurs, the API returns a JSON response with an `error` object:
     "code": "insufficient_balance",
     "message": "Customer does not have sufficient balance for this operation",
     "param": "amount_cents",
-    "doc_url": "https://docs.bipa.app/errors#insufficient_balance"
+    "doc_url": "https://docs.bipa.tech/errors#insufficient_balance"
   }
 }
 ```
@@ -163,8 +163,8 @@ import requests
 
 try:
     response = requests.post(
-        "https://api.bipa.app/v1/customers",
-        headers={"Authorization": "Bearer sk_live_..."},
+        "https://api.bipa.tech/v1/customers",
+        headers={"Authorization": "Bearer bipa_live_sk_..."},
         json={"type": "individual", "name": "João"}
     )
     response.raise_for_status()
@@ -185,10 +185,10 @@ except requests.exceptions.HTTPError as e:
 
 ```javascript Node.js
 try {
-  const response = await fetch("https://api.bipa.app/v1/customers", {
+  const response = await fetch("https://api.bipa.tech/v1/customers", {
     method: "POST",
     headers: {
-      "Authorization": "Bearer sk_live_...",
+      "Authorization": "Bearer bipa_live_sk_...",
       "Content-Type": "application/json"
     },
     body: JSON.stringify({ type: "individual", name: "João" })
